--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # expandable: ^5.0.1    # Might use in future. Source: https://pub.dev/packages/expandable
 
 dev_dependencies:
   flutter_test:
