got square in app payment to receive nonce from square, now just need to process it and complete charge on server end

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
-            android:value="2" />
+            android:value="2"/>
+       <meta-data
+           android:name="sqip.SQUARE_APPLICATION_ID"
+           android:value="REPLACE WITH APPLICATION ID"/>
     </application>
+    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="32" />
 </manifest>
