--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:value="2"/>
        <meta-data
            android:name="sqip.SQUARE_APPLICATION_ID"
-           android:value="REPLACE WITH APPLICATION ID"/>
+           android:value="sandbox-sq0idb-5l8c2u8OdZQNh_t3Tk43QQ"/>
     </application>
     <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="32" />
 </manifest>
